added the extra support for the algorithm including the viewC page

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1099,11 +1099,15 @@
 
             localStorage.setItem(`ridePatObj_${ridePatNum}`, JSON.stringify(thisridePatObj));
 
+            window.open("viewCandidates.html", '_blank').focus();
+
+            /*
             let a = document.createElement('a');
 
             a.target = '_blank';
             a.href = "viewCandidates.html";
             a.click();
+            */
         }
 
         function editButton(ridePat) {
