--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -137,7 +137,7 @@
 
                                     <div class="col-sm-12 text-right">
 
-                                        <button data-placement="right" data-toggle="tooltip" title="New Ride جديد " type="button" id="createCustomer" onclick="newRidePatForm()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>חדש</button>
+                                        <button data-placement="right" data-toggle="tooltip" title="בחינת הפרמטרים השונים" type="button" id="viewCandidatesDetailedCharactaristics" onclick="viewCharactaristics()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>צפה בציוני האלגוריתם</button>
 
                                     </div>
                                 </div>
