Candidate module work

--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -112,11 +112,6 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="page-title-box">
-                                <ol class="breadcrumb pull-right">
-                                    <li class="active">
-                                        ניהול מועמדים להסעה
-                                    </li>
-                                </ol>
                                 <h4 class="page-title">
                                     ניהול מועמדים להסעה&nbsp&nbsp&nbsp<i data-toggle="tooltip" title="My Rides تنسيق السفريات الخاصة بي">
                                         <img src="../../Media/הסעות להיום.png" height="25" width="25" />
@@ -125,7 +120,6 @@
                             </div>
                             <h4 class="page-title">
                                 <span id="RideCandidates_ph"></span>
-
                             </h4>
                         </div>
                     </div>
@@ -133,18 +127,11 @@
                         <div class="col-sm-12">
                             <div class="card-box table-responsive">
                                 <div class="row">
-
-
                                     <div class="col-sm-12 text-right">
-
                                         <button data-placement="right" data-toggle="tooltip" title="בחינת הפרמטרים השונים" type="button" id="viewCandidatesDetailedCharactaristics" onclick="viewCharactaristics()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>צפה בציוני האלגוריתם</button>
-
                                     </div>
                                 </div>
-
                                 <div id="accordion" class="panel-group">
-
-
                                     <div class="panel panel-primary">
                                         <div class="panel-heading" id="col1">
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
@@ -158,9 +145,6 @@
 
                                         <div class="panel-collapse collapse" id="collapse1">
                                             <div class="panel-body">
-                                                <!-- candidates checkboxes -->
-                                                <!--     <input type="checkbox" name="name" />-->
-                                                <!-- candidates checkboxes -->
 
                                                 <table id="datatable-candidates" class="table table-striped table-bordered">
                                                     <thead>
@@ -168,11 +152,20 @@
                                                             <th class="middle" title="Time  الساعة">המתנדב.ת</th>
                                                             <th class="middle" title="Origin  نقطة الانطلاق">טלפון</th>
                                                             <th class="middle" title="Address عنوان">מקום מגורים</th>
-                                                            <th class="middle" title="Destination  نقطة الوصول">ימים מאז הסעה אחרונה</th>
+                                                            <th class="middle" title="Destination  نقطة الوصول">
+                                                                ההסעה האחרונה
+                                                                (ימים מאז)
+                                                            </th>
                                                             <th class="middle" title="Patient  المريض">מס' הסעות בחודשיים האחרונים</th>
-                                                            <th class="middle" title="Driver  السائق">ימים עד ההסעה הבאה</th>
+                                                            <th class="middle" title="Driver  السائق">
+                                                                ההסעה הבאה
+                                                                (ימים)
+                                                            </th>
                                                             <th class="middle" title="Status  حالة السفرية">שיחה אחרונה</th>
-                                                            <th class="middle" title="Last modified">ותק בעמותה בשנים</th>
+                                                            <th class="middle" title="Last modified">
+                                                                ותק בעמותה
+                                                                (שנים)
+                                                            </th>
                                                             <th class="middle" title="Actions  اعمال">פעולות</th>
                                                         </tr>
                                                     </thead>
@@ -202,11 +195,20 @@
                                                             <th class="middle" title="Time  الساعة">המתנדב.ת</th>
                                                             <th class="middle" title="Origin  نقطة الانطلاق">טלפון</th>
                                                             <th class="middle" title="Address عنوان">מקום מגורים</th>
-                                                            <th class="middle" title="Destination  نقطة الوصول">ימים מאז הסעה אחרונה</th>
+                                                            <th class="middle" title="Destination  نقطة الوصول">
+                                                                ההסעה האחרונה
+                                                                (ימים מאז)
+                                                            </th>
                                                             <th class="middle" title="Patient  المريض">מס' הסעות בחודשיים האחרונים</th>
-                                                            <th class="middle" title="Driver  السائق">ימים עד ההסעה הבאה</th>
+                                                            <th class="middle" title="Driver  السائق">
+                                                                ההסעה הבאה
+                                                                (ימים)
+                                                            </th>
                                                             <th class="middle" title="Status  حالة السفرية">שיחה אחרונה</th>
-                                                            <th class="middle" title="Last modified">ותק בעמותה בשנים</th>
+                                                            <th class="middle" title="Last modified">
+                                                                ותק בעמותה
+                                                                (שנים)
+                                                            </th>
                                                             <th class="middle" title="Actions  اعمال">פעולות</th>
                                                         </tr>
                                                     </thead>
