--- a/Road to Recovery/viewC.html
+++ b/Road to Recovery/viewC.html
@@ -74,7 +74,7 @@
                     id: k,
                     name: candidates[k].DisplayName,
                     score: parseInt(candidates[k].Score),
-                    driverLevel: candidates[k].DriverLevel,
+                    super: candidates[k].IsSuperDriver,
                     SameDayPart: candidates[k].AmmountOfMatchDayPart,
                     DifferentDayPart: candidates[k].AmmountOfDisMatchDayPart,
                     sameDay: candidates[k].AmmountOfMatchByDay,
@@ -90,17 +90,12 @@
                 //console.log(v);
             }
 
-            let driverLevel = $("#driverLevelDDL").val();
+            let volType = $("#volTypeDDL").val();
 
-            if (driverLevel == "super")
-                candidatesByType = vol.filter(v => v.driverLevel == 2);
-
-            else if (driverLevel == "regular")
-                candidatesByType = vol.filter(v => v.driverLevel == 1);
-
-            else if (driverLevel == "new")
-                        candidatesByType = vol.filter(v => v.driverLevel == 0);
-
+            if (volType == "super")
+                candidatesByType = vol.filter(v => v.super);
+            else if (volType == "regular")
+                candidatesByType = vol.filter(v => !(v.super));
             else
                 candidatesByType = vol;
 
@@ -116,7 +111,7 @@
                     { data: "id" },
                     { data: "score" },
                     { data: "name" },
-                    { data: "driverLevel" },
+                    { data: "super" },
                     { data: "SameDayPart" },
                     { data: "DifferentDayPart" },
                     { data: "sameDay" },
@@ -147,12 +142,10 @@
     <div>
         <!--<input type="number" id="rideId" />-->
         <button id="GetCandidatesBTN">Show Candidates</button>
-        <select id="driverLevelDDL">
-            <option value="-1">הצג את כולם</option>
-            <option value="super">סופר מסיעים</option>
-            <option value="regular">מסיעים רגילים</option>
-            <option value="new">מסיעים חדשים</option>
-
+        <select id="volTypeDDL">
+            <option value="-1">all</option>
+            <option value="super">super</option>
+            <option value="regular">regular</option>
 
         </select>
     </div>
