--- a/Road to Recovery/pages/viewC.html
+++ b/Road to Recovery/pages/viewC.html
@@ -30,13 +30,16 @@
     <script>
 
         $(document).ready(function () {
-            $("#GetCandidatesBTN").hide();
+            $("#GetCandidatesBTN").click(drawResults);
+            console.log("ready");
+            $('#wait').show();
+            $('#GetCandidatesBTN').hide();
             //$("#GetCandidatesBTN").click(fetchData4ThisRidepat);
             ridePatNum = getParameterByName('ridePatNum');
             //ridePatNum = JSON.parse(getRidePatNum4_viewCandidate());
             fetchData4ThisRidepat(ridePatNum);
 
-            $("#GetCandidatesBTN").click(drawResults);
+            
         })
 
         const fetchData4ThisRidepat = (ridePatNum) => {
@@ -53,9 +56,11 @@
                 async: false,
                 data: JSON.stringify({ ridePatNum: ridePatNum, numOfCandidates: numOfCandidates, newFlag : false}),
                 success: function (data) {
-                    $("#GetCandidatesBTN").show();
+                    $('#GetCandidatesBTN').show();
                     candidates = JSON.parse(data.d);
-                    //drawResults(JSON.parse(data.d));
+                    $('#wait').hide();
+                    populateResults();
+                    drawResults();
                     
                 },
                 error: function (err) {
@@ -65,11 +70,13 @@
         }
 
 
-        function drawResults() {
+        function populateResults() {
 
-            superVol = [];
             vol = [];
             for (k in candidates) {
+                // SKIP THE NEW ONES 
+                if (candidates[k].DriverLevel == 0)
+                    continue;
                 v = {
                     id: k,
                     name: candidates[k].DisplayName,
@@ -89,6 +96,11 @@
                 vol.push(v);
                 //console.log(v);
             }
+        }
+
+
+        function drawResults() {
+
 
             let driverLevel = $("#driverLevelDDL").val();
 
@@ -99,7 +111,7 @@
                 candidatesByType = vol.filter(v => v.driverLevel == 1);
 
             else if (driverLevel == "new")
-                        candidatesByType = vol.filter(v => v.driverLevel == 0);
+                 candidatesByType = vol.filter(v => v.driverLevel == 0);
 
             else
                 candidatesByType = vol;
@@ -146,12 +158,12 @@
 
     <div>
         <!--<input type="number" id="rideId" />-->
-        <button id="GetCandidatesBTN">Show Candidates</button>
+        <button id="GetCandidatesBTN">הצג מועמדים</button>
         <select id="driverLevelDDL">
             <option value="-1">הצג את כולם</option>
             <option value="super">סופר מסיעים</option>
             <option value="regular">מסיעים רגילים</option>
-            <option value="new">מסיעים חדשים</option>
+            <!--<option value="new">מסיעים חדשים</option>-->
 
 
         </select>
@@ -176,6 +188,14 @@
             </tr>
         </thead>
     </table>
+
+    <!--<div id="wait" style="display:none;width:69px;height:89px;position:absolute;top:50%;left:50%;padding:2px;">
+        <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
+    </div>-->
+
+    <div id="wait" style="width:69px;height:89px;position:absolute;top:50%;left:50%;padding:2px;z-index:1000">
+        <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
+    </div>
 
 </body>
 </html>
