fix arrow direction in candidate.html
fix arrow direction in candidate.html

--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -156,7 +156,7 @@
                                     <div class="panel panel-primary">
                                         <div class="panel-heading" id="col1">
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
-                                                <a href="#collapse1" data-parent="#accordion" data-toggle="collapse" class="dropdown active open">
+                                                <a id="collapsed1_aTag" href="#collapse1" data-parent="#accordion" data-toggle="collapse" class="dropdown active open">
                                                     <span class="m-l-15">
                                                         מסיעים רגילים
                                                     </span>
@@ -204,7 +204,7 @@
                                     <div class="panel panel-primary">
                                         <div class="panel-heading" id="col2">
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
-                                                <a href="#collapse2" data-parent="#accordion" data-toggle="collapse">
+                                                <a  id="collapsed2_aTag"  href="#collapse2" data-parent="#accordion" data-toggle="collapse">
                                                     <span class="m-l-15">
                                                         סופר מסיעים
                                                     </span>
